# filehost-rs

./: .gitignore  Cargo.toml  README.md
src/: adjectives.txt  config.rs  default_config.yml  main.rs  nouns.txt  upload.rs
