[package]
name = "filehost-rs"
version = "0.1.0"
authors = ["vlakreeh <zebpiasecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
async-std = "1.5.0"
actix-multipart = "0.2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
rand = "0.7.3"
actix-rt = "1.0.0"
futures = "0.3.4"
