[package]
name = "filehost-rs"
version = "0.1.1"
authors = ["vlakreeh <zebpiasecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-std = "1.11.0"
actix-multipart = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
rand = "0.8.5"
futures = "0.3.21"
